# quarter-OCCT-Qt6

./: .gitignore  CMakeLists.txt  base.cpp  geometrydrawer.pro
DataProcess/src/: DataProcess.cpp
Step2Stl/example/: CMakeLists.txt  README.md  step2stl_example.cpp
Step2Stl/include/: Step2Stl.h  Step2StlGlobal.h
Step2Stl/src/: Step2Stl.cpp
include/: AnotherMainWindow.h  CompoundCurveExtractor.h  CurveExtractor.h  IGESLoader.h  MeshRemover.h  MeshabilitySeparator.h  OccWidget.h  OcctUtil.h  QTestWidget.h  QuarterOcctViewer.h  STEPAnalyzer.h  STEPLoader.h  STLExportDiagnoser.h  STLExportFilter.h  STLExportWithCurvePoints.h  STLMultiLevelExporter.h  ShapeStatistics.h  ShapeUtil.h  TestWindow.h  TextDemoWidget.h  TextOnCylinderForm.h  TextShape.h  TopologyExplorer.h  TwoProjectionWidget.h  ViewTool.h  base.h  curveAnalysys.h  geometrydrawer.h  importCurveToFile.h  mainwindow.h  occtgeometry.h  quarterviewer.h
install/include/DataProcess/: DataProcess.h  DataProcessGlobal.h
install/include/Step2Stl/: Step2Stl.h
install/lib/: DataProcess.lib  Step2Stl.lib
src/: AnotherMainWindow.cpp  CompoundCurveExtractor.cpp  CubeWindow.cpp  CubeWindow.h  CurveExtractor.cpp  IGESLoader.cpp  MeshRemover.cpp  MeshabilitySeparator.cpp  OccWidget.cpp  OcctUtil.cpp  ProjectionWgt.cpp  ProjectionWgt.h  QTestWidget.cpp  QuarterOcctViewer.cpp  QuarterOcctViewerTest.cpp  STEPAnalyzer.cpp  STEPLoader.cpp  STLExportDiagnoser.cpp  STLExportFilter.cpp  STLExportWithCurvePoints.cpp  STLMultiLevelExporter.cpp  ShapeStatistics.cpp  ShapeUtil.cpp  TestWindow.cpp  TestWindowMain.cpp  TextDemoWidget.cpp  TextOnCylinderForm.cpp  TextShape.cpp  TopologyExplorer.cpp  TwoProjectionWidget.cpp  ViewTool.cpp  curveAnalysys.cpp  geometrydrawer.cpp  importCurveToFile.cpp  main.cpp  mainwindow.cpp  occtgeometry.cpp  pickDemoWidget.cpp  pickDemoWidget.h  quarterviewer.cpp
